Changelog
---------

Version 1.0dev
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Reimplemented the disk cache to correctly restore all template
  data. This implementation keeps a cache in a pickled format in a
  file next to the original template. [malthe]

- Refactored compilation classes to better separate concerns. [malthe]

- Genshi macros (py:def) are now available globally. [malthe]

- A syntax error is now raised when an interpolation expression is not
  exhausted, e.g. only a part of the string is a valid
  Python-expression. [malthe]

- System variables are now defined in a configuration class. [malthe]

- Improve performance of codegen by not repeatedly calling
  an expensive "flatten" function. [chrism]

- Remove ``safe_render`` implementation detail.  It hid information
  in tracebacks. [chrism]

- Fixed a few more UnicodeDecodeErrors (test contributed by Wiggy).
  In particular, never upcast to unicode during transformation, and
  utf-8 encode Unicode attribute keys and values in Assign expressions
  (e.g. py:attrs). [chrism]

- Implemented TAL global defines. [malthe]

- Added support for variables with global scope. [malthe]

- Curly braces may now be omitted in an expression interpolation if
  the expression is just a variable name; this complies with the
  Genshi syntax. [malthe]

- Fixed off-by-one bug in interpolation routine. [malthe]

- The repeat-clause should not output tail with every iteration. [malthe]

- UTF-8 encode Unicode attribute literals. [chrism]

- Substantially reduced compiler overhead for lxml CDATA
  workaround. [malthe]

- Split out element compiler classes for Genshi and Zope language
  dialects. [malthe]

- Make lxml a setuptools "extra".  To install with lxml support
  (currently required by Genshi), specify "z3c.pt [lxml]" in
  any references you need to make to the package in buildout or
  in setup.py install_requires.  [chrism]

- Add test-nolxml and py-nolxml parts to buildout so the package's